Fix z-index value in hero section styles for improved layering

--- a/src/containers/hero/styles.scss
+++ b/src/containers/hero/styles.scss
@@ -17,9 +17,7 @@
     position: absolute !important;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -99999; 
+    z-index: -999; 
   }
 
   .container {
